# k6071

./: .clang-format  .gitignore  CMakeLists.txt  README.md  kokkos.cpp
src/: cuda.cu  hip.cpp  kokkos.cpp  test.cpp  utils.hpp
